SERVER-23183 remove redundant NULL check in WiredTigerIndex::fullValidate